--- a/css/media.css
+++ b/css/media.css
@@ -1,397 +1,467 @@
-@media (max-width:1440px) {
-    .blog-card {
-        height: max-content;
-    }
-    .meet-clients h2 {
-        width: auto;
-    }
-    .contact-left-icons, .contact-right-icons {
-        margin-right: 2px !important;
-    }
-    .img-divs {
-        height: 338px;
-    }
-    .sec6 {
-        height: 773px;
-    }
+@media (max-width: 1440px) {
+  .blog-card {
+    height: max-content;
+  }
+  .meet-clients h2 {
+    width: auto;
+  }
+  .contact-left-icons,
+  .contact-right-icons {
+    margin-right: 2px !important;
+  }
+  .img-divs {
+    height: 338px;
+  }
+  .sec6 {
+    height: 773px;
+  }
 }
 
-@media (max-width:1200px) {
-    header {
-        padding: 8px 0px !important;
-    }
-    .team-cards:hover .team-card-contacts {
-        transform: translateY(-23px);
-    }
-    .img-divs {
-        height: 331px;
-    }
-    .sec6 {
-        height: 700px;
-    }
-    .purchase-head {
-        font-size: 25px !important;
-    }
-    .sec2-content img {
-        margin-left: 200px !important;
-        height: max-content !important;
-        flex: 1 0 0% !important;
-        width: 100%;
-    }
-    .about-content {
-        flex: 1 0 0% !important;
-    }
-    .sec2-deps {
-        right: 75%;
-        left: unset !important;
-    }
+@media (max-width: 1200px) {
+  header {
+    padding: 8px 0px !important;
+  }
+  .team-cards:hover .team-card-content {
+    top: 46%;
+    height: 200px;
+  }
+  .team-cards:hover .team-card-contacts {
+    transform: translateY(-6px);
+  }
+  .img-divs {
+    height: 331px;
+  }
+  .sec6 {
+    height: 700px;
+  }
+  .purchase-head {
+    font-size: 25px !important;
+  }
 }
 
-@media (max-width:992px) {
-    .contact .left, .contact .right {
-        font-size: 13px !important;
-    }
-    header {
-        padding: 8px 0px !important;
-    }
-    .contact {
-        width: 90% !important;
-    }
-    .contact-left-icons, .contact-right-icons {
-        margin-right: 2px !important;
-    }
-    .carousel-inner {
-        height: 479px;
-    }
-    .sec2-content {
-        width: 90% !important;
-    }
-    .sec2-content img {
-        margin-left: 120px !important;
-        height: max-content !important;
-        flex: 1 0 0% !important;
-        width: 100%;
-    }
-    .sec2-deps {
-        right: 70%;
-        left: unset !important;
-    }
-    .dep1 {
-        padding: 0 10px !important;
-    }
-    .deps-heading, .deps-para {
-        font-size: 17px !important;
-        margin-bottom: 2px;
-    }
-    .status-para {
-        font-size: 15px !important;
-    }
-    .status-content {
-        margin-left: 10px !important;
-    }
-    .icon-div {
-        width: 60px !important;
-    }
-    .services-heading h2 {
-        width: 30% !important;
-    }
-    .descrip-heading {
-        font-size: 18px !important;
-    }
-    .descrip-para {
-        font-size: 12px !important;
-    }
-    .descrip-but {
-        padding: 6px 13px !important;
-    }
-    .heading-cards {
-        font-size: 20px !important;
-    }
-    .img-divs {
-        height: 242px;
-    }
-    .sec6 {
-        height: 580px;
-    }
-    .blue-div-bar {
-        margin-top: 140px;
-    }
-    .blue-bar-para {
-        font-size: 10px;
-    }
-    .blue-bar-link {
-        font-size: 16px;
-    }
-    .creative-heading h2 {
-        width: 40%;
-    }
-    .team-card-content {
-        padding: 13px 0px !important;
-    }
-    .team-card-desc {
-        padding: 0px 0px !important;
-    }
-    .pricing-tabs-head {
-        width: 50% !important;
-    }
-    .pricing-para {
-        font-size: 13px !important;
-    }
-    .sec9-container {
-        width: 90% !important;
-    }
-    .email-input {
-        width: 65% !important;
-    }
-    .details-editor-date a {
-        display: block;
-        padding: 0px !important;
-    }
-    .details-editor-date .separator {
-        display: none;
-    }
-    .details-para {
-        font-size: 13px !important;
-    }
-    .blog-content-contacts a {
-        margin-top: 25px !important;
-    }
-    .client-img1 {
-        top: 35%;
-    }
-    .client-img2 {
-        top: 25%;
-    }
-    .client-img3 {
-        top: 29%;
-    }
-    .client-img4 {
-        top: 25%;
-    }
-    .client-img5 {
-        top: 35%;
-    }
-    .client-img6 {
-        top: 30%;
-    }
-    .popular-tag {
-        margin-top: 5px !important;
-    }
-    /* ===================== */
-    .info-heading {
-        font-size: 33px;
-    }
+@media (max-width: 992px) {
+  .contact .left,
+  .contact .right {
+    font-size: 13px !important;
+  }
+  header {
+    padding: 8px 0px !important;
+  }
+  header,
+  header .right {
+    text-align: center !important;
+  }
+  .contact {
+    width: 90% !important;
+  }
+  .contact-left-icons,
+  .contact-right-icons {
+    margin-right: 2px !important;
+  }
+  .carousel-inner {
+    height: 479px;
+  }
+  .sec2-content {
+    width: 90% !important;
+  }
+  .sec2-content img {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .about-content {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .sec2-deps {
+    position: unset;
+    width: 100%;
+    box-shadow: unset;
+  }
+  .deps {
+    display: flex;
+    justify-content: space-between;
+  }
+  .dep1 {
+    padding: 0 10px !important;
+    margin: 0 !important;
+  }
+  .deps-heading,
+  .deps-para {
+    font-size: 17px !important;
+    margin-bottom: 2px;
+  }
+  .status-para {
+    font-size: 15px !important;
+  }
+  .status-content {
+    margin-left: 10px !important;
+  }
+  .icon-div {
+    width: 60px !important;
+  }
+  .services-heading h2 {
+    width: 30% !important;
+  }
+  .descrip-heading {
+    font-size: 18px !important;
+  }
+  .descrip-para {
+    font-size: 12px !important;
+  }
+  .descrip-but {
+    padding: 6px 13px !important;
+  }
+  .heading-cards {
+    font-size: 20px !important;
+  }
+  .img-divs {
+    height: 242px;
+  }
+  .sec6 {
+    height: 580px;
+  }
+
+  .blue-bar-para {
+    font-size: 10px;
+  }
+  .blue-bar-link {
+    font-size: 16px;
+  }
+  .creative-heading h2 {
+    width: 40%;
+  }
+  .team-card-content {
+    padding: 13px 0px !important;
+  }
+  .team-card-desc {
+    padding: 0px 0px !important;
+  }
+  .team-cards:hover .team-card-contacts {
+    transform: translateY(-8px);
+  }
+  .pricing-tabs-head {
+    width: 50% !important;
+  }
+  .pricing-para {
+    font-size: 13px !important;
+  }
+  .sec9-container {
+    width: 90% !important;
+  }
+  .email-input {
+    width: 65% !important;
+  }
+  .details-editor-date a {
+    display: block;
+    padding: 0px !important;
+  }
+  .details-editor-date .separator {
+    display: none;
+  }
+  .details-para {
+    font-size: 13px !important;
+  }
+  .blog-content-contacts a {
+    margin-top: 25px !important;
+  }
+  .popular-tag {
+    margin-top: 5px !important;
+  }
+  /* ===================== */
+  .info-heading {
+    font-size: 33px;
+  }
 }
 
-@media (max-width:768px) {
-    .contact {
-        width: 90% !important;
-    }
-    .contact-left-icons, .contact-right-icons {
-        margin-right: 2px !important;
-    }
-    .carousel-indicators {
-        top: 0;
-    }
-    .carousel-inner {
-        height: 366px;
-    }
-    .carousel-but {
-        font-size: 15px;
-        padding: 8px 11px !important;
-    }
-    .slider-img {
-        width: unset !important;
-        height: 450px;
-    }
-    .slide-header {
-        margin-top: 55px;
-    }
-    .about-content {
-        padding-top: 35px;
-    }
-    .statuses {
-        justify-content: space-between;
-        padding: 30px 0px;
-    }
-    .status {
-        flex: 0 0 auto;
-        width: 41.66666667%;
-    }
-    .status3, .status4 {
-        margin-top: 5px !important;
-    }
-    .services-heading h2, .work-heading h2, .Pricing-heading h2, .creative-heading h2, .latestBlog-heading h2 {
-        width: auto !important;
-    }
-    .heading-cards {
-        font-size: 15px !important;
-    }
-    .cards .head {
-        padding-top: 70px !important;
-    }
-    .img-divs {
-        height: 182px;
-    }
-    .blue-div-bar {
-        margin-top: 95px;
-        padding: 5px 8px !important;
-    }
-    .blue-bar-para {
-        font-size: 9px;
-        margin-bottom: 0px !important;
-    }
-    .blue-bar-link {
-        font-size: 11px;
-    }
-    .sec6 {
-        height: 449px;
-    }
-    .team-card-heading {
-        font-size: 15px;
-    }
-    .team-card-position {
-        font-size: 13px;
-    }
-    .team-card-desc {
-        font-size: 12px;
-        margin: 9px 4px !important;
-    }
-    .pricing-but {
-        padding: 17px 10px !important;
-    }
-    .email-input {
-        width: 60% !important;
-    }
-    .subscribe-heading {
-        font-size: 25px !important;
-    }
-    /* =========================== */
-    .info-heading {
-        flex: 0 0 auto;
-        width: 41.66666667%;
-    }
-    .sec1-2-header {
-        font-size: 55px;
-        margin: 95px 0px;
-    }
-    .sec2-2-container, .sec3-2-container, .sec4-2-container, .sec5-2-container {
-        width: 90%;
-    }
+@media (max-width: 768px) {
+  .contact {
+    width: 90% !important;
+  }
+  .contact-left-icons,
+  .contact-right-icons {
+    margin-right: 2px !important;
+  }
+  .carousel-indicators {
+    top: 0;
+  }
+  .carousel-inner {
+    height: 366px;
+  }
+  .carousel-but {
+    font-size: 15px;
+    padding: 8px 11px !important;
+  }
+  .slider-img {
+    width: unset !important;
+    height: 450px;
+  }
+
+  .statuses {
+    justify-content: space-between;
+    padding: 30px 0px;
+  }
+  .status {
+    flex: 0 0 auto;
+    width: 41.66666667%;
+  }
+  .status3,
+  .status4 {
+    margin-top: 5px !important;
+  }
+  .services-heading h2,
+  .work-heading h2,
+  .Pricing-heading h2,
+  .creative-heading h2,
+  .latestBlog-heading h2 {
+    width: auto !important;
+  }
+  .heading-cards {
+    font-size: 15px !important;
+  }
+  .cards .head {
+    padding-top: 70px !important;
+  }
+  .img-divs {
+    height: 182px;
+  }
+
+  .blue-bar-para {
+    font-size: 9px;
+    margin-bottom: 0px !important;
+  }
+  .blue-bar-link {
+    font-size: 11px;
+  }
+  .sec6 {
+    height: 449px;
+  }
+  .team-card-heading {
+    font-size: 15px;
+  }
+  .team-card-position {
+    font-size: 13px;
+  }
+  .team-card-desc {
+    font-size: 12px;
+    margin: 9px 4px !important;
+  }
+  .pricing-but {
+    padding: 17px 10px !important;
+  }
+  .heading-price,
+  .range-price {
+    margin: 0 !important;
+  }
+  .range-price {
+    margin-bottom: 10px !important;
+  }
+  .psd-pack {
+    padding: 10px 0px !important;
+  }
+  .email-input {
+    width: 60% !important;
+  }
+  .subscribe-heading {
+    font-size: 25px !important;
+  }
+  .info-heading {
+    font-size: 20px;
+  }
+  .sec1-2-header {
+    font-size: 55px;
+    margin: 95px 0px;
+  }
+  .sec2-2-container,
+  .sec3-2-container,
+  .sec4-2-container,
+  .sec5-2-container {
+    width: 90%;
+  }
+  .deps {
+    display: unset;
+    justify-content: space-between;
+  }
+  .dep1 {
+    width: 100% !important;
+    margin-bottom: 10px !important;
+  }
+  .dep1:last-child {
+    margin-bottom: unset;
+  }
+  .dep1 .deps-content {
+    text-align: center !important;
+  }
+  .team-card-desc {
+    font-size: 10px;
+    margin: 0px 4px !important;
+  }
+
+  .team-cards:hover .team-card-contacts {
+    transform: translateY(34px);
+  }
 }
 
-@media (max-width:576px) {
-    .contact .left, .contact .right {
-        text-align: center !important;
-    }
-    .contact-left-icons, .contact-right-icons {
-        margin-right: 10px !important;
-    }
-    .contact-right-icons {
-        margin-right: 5px !important;
-    }
-    .right .contact-right-icons {
-        margin-left: 10px !important;
-    }
-    .carousel-inner {
-        height: 277px;
-    }
-    .slider-img {
-        width: unset !important;
-        height: 337px;
-    }
-    .slide-header {
-        font-size: 21px !important;
-        margin-top: 54px;
-    }
-    .slide-para {
-        font-size: 12px !important;
-    }
-    .carousel-but {
-        font-size: 10px;
-        padding: 8px 11px !important;
-    }
-    .sec2-about {
-        margin: 11px 0px !important;
-    }
-    .about {
-        margin-bottom: 10px !important;
-    }
-    .sec2-deps {
-        right: 58%;
-        top: 5%;
-        opacity: 0.9;
-        width: 45%;
-    }
-    .out-work-tabs-but {
-        font-size: 15px !important;
-    }
-    .img-divs {
-        height: 162px;
-    }
-    .blue-div-bar {
-        margin-top: 67px;
-        padding: 5px 8px !important;
-    }
-    .blue-bar-para {
-        font-size: 9px;
-        margin-bottom: 0px !important;
-    }
-    .blue-bar-link {
-        font-size: 11px;
-    }
-    .sec6 {
-        height: 335px;
-    }
-    .team-card-heading {
-        font-size: 15px;
-    }
-    .team-card-position {
-        font-size: 13px;
-    }
-    .team-card-desc {
-        font-size: 11px;
-        margin: 9px 4px !important;
-    }
-    .pricing-but {
-        font-size: 10px;
-    }
-    .subscribe-form .subscribe-form-submit {
-        font-size: 10px;
-    }
-    .subscribe-heading {
-        font-size: 18px !important;
-    }
-    .email-input {
-        display: block;
-        width: 90% !important;
-        margin-bottom: 5px !important;
-    }
-    .about-heading h2, .testimonial-heading h2 {
-        flex: 0 0 auto;
-        width: 41.66666667%;
-    }
-    .purchase-head {
-        font-size: 22px !important;
-    }
-    .purchase-now {
-        font-size: 10px;
-    }
-    .info-divs {
-        width: 56%;
-        margin-top: 12px !important;
-    }
-    .sec14-container, .sec5-2-container {
-        margin: 10px auto !important;
-        flex-direction: column;
-        align-items: center;
-    }
-    .sec14, .sec5-2 {
-        padding: 2px 0px !important;
-    }
-    /* =============================== */
-    .sec1-2-header {
-        font-size: 55px;
-        margin: 45px 0px;
-    }
+@media (max-width: 576px) {
+  .contact .left,
+  .contact .right {
+    text-align: center !important;
+  }
+  .contact-left-icons,
+  .contact-right-icons {
+    margin-right: 10px !important;
+  }
+  .contact-right-icons {
+    margin-right: 5px !important;
+  }
+  .right .contact-right-icons {
+    margin-left: 10px !important;
+  }
+  .carousel-inner {
+    height: 277px;
+  }
+  .slider-img {
+    width: unset !important;
+    height: 337px;
+  }
+  .slide-header {
+    font-size: 21px !important;
+  }
+  .slide-para {
+    font-size: 12px !important;
+  }
+  .carousel-but {
+    font-size: 10px;
+    padding: 8px 11px !important;
+  }
+  .sec2-about {
+    margin: 11px 0px !important;
+  }
+  .about {
+    margin-bottom: 10px !important;
+  }
+
+  .out-work-tabs-but {
+    font-size: 15px !important;
+  }
+  .img-divs {
+    height: 162px;
+  }
+  .blue-div-bar {
+    padding: 2px 4px !important;
+  }
+  .blue-bar-para {
+    font-size: 9px;
+    margin-bottom: 0px !important;
+  }
+  .blue-bar-link {
+    font-size: 11px;
+  }
+  .sec6 {
+    height: 335px;
+  }
+  .team-card-content {
+    top: 83.5%;
+  }
+  .team-card-heading {
+    font-size: 15px;
+  }
+  .team-card-position {
+    font-size: 13px;
+  }
+  .team-cards:hover .team-card-contacts {
+    transform: translateY(50px);
+  }
+  .pricing-tabs-head button {
+    padding: 10px !important;
+  }
+  .pricing-but {
+    font-size: 10px;
+  }
+  .subscribe-form .subscribe-form-submit {
+    font-size: 10px;
+  }
+  .subscribe-heading {
+    font-size: 18px !important;
+  }
+  .email-input {
+    display: block;
+    width: 90% !important;
+    margin-bottom: 5px !important;
+  }
+
+  .about-heading h2,
+  .testimonial-heading h2 {
+    flex: 0 0 auto;
+    width: 41.66666667%;
+  }
+  .purchase-head {
+    font-size: 22px !important;
+  }
+  .purchase-now {
+    font-size: 10px;
+  }
+  .info-divs {
+    margin-top: 12px !important;
+  }
+  .blog-card {
+    margin-bottom: 20px !important;
+  }
+  .blog-card:last-child {
+    margin-bottom: unset !important;
+  }
+  .owl-next,
+  .owl-prev {
+    padding: 20px !important;
+  }
+  .client-div-img {
+    height: 150px;
+  }
+
+  .sec14,
+  .sec5-2 {
+    padding: 2px 0px !important;
+  }
+  /* =============================== */
+  .sec1-2-header {
+    font-size: 55px;
+    margin: 45px 0px;
+  }
+  .phone-way {
+    margin: 30px 0px;
+  }
+}
+
+@media (max-width: 425px) {
+  .pricing-tabs-head {
+    margin: 0px !important;
+    width: 100% !important;
+  }
+  .pricing-tabs-head ul {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+  .pricing-tabs-head ul li {
+    width: 50% !important;
+  }
+  .pricing-tabs-head button {
+    padding: 4px !important;
+  }
+  .sec14-container div {
+    padding: 0px;
+  }
+  .info-heading {
+    font-size: 14px;
+  }
+}
+@media (max-width: 375px) {
+  .team-cards:hover .team-card-contacts {
+    transform: translateY(42px);
+  }
+  .pricing-tabs-head button {
+    padding: 4px !important;
+  }
+  .client-div-img {
+    height: 100px;
+  }
 }
